@@ -12,19 +12,18 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.ArgumentCaptor;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import uk.gov.hmcts.ccd.sdk.type.AddressUK;
 import uk.gov.hmcts.reform.docassembly.domain.OutputType;
 import uk.gov.hmcts.reform.pcs.ccd.entity.PartyAccessCodeEntity;
 import uk.gov.hmcts.reform.pcs.ccd.entity.PcsCaseEntity;
-import uk.gov.hmcts.reform.pcs.ccd.model.Defendant;
+import uk.gov.hmcts.reform.pcs.ccd.repository.ClaimRepository;
 import uk.gov.hmcts.reform.pcs.ccd.repository.PartyAccessCodeRepository;
-import uk.gov.hmcts.reform.pcs.document.service.DocAssemblyService;
-import uk.gov.hmcts.reform.pcs.document.service.exception.DocAssemblyException;
 import uk.gov.hmcts.reform.pcs.ccd.repository.PcsCaseRepository;
 import uk.gov.hmcts.reform.pcs.ccd.service.AccessCodeGenerationService;
 import uk.gov.hmcts.reform.pcs.ccd.service.PcsCaseService;
+import uk.gov.hmcts.reform.pcs.document.service.DocAssemblyService;
+import uk.gov.hmcts.reform.pcs.document.service.exception.DocAssemblyException;
 import uk.gov.hmcts.reform.pcs.postcodecourt.model.EligibilityResult;
 import uk.gov.hmcts.reform.pcs.postcodecourt.model.LegislativeCountry;
 import uk.gov.hmcts.reform.pcs.postcodecourt.service.EligibilityService;
@@ -44,6 +43,7 @@ import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.doAnswer;
 import static org.mockito.Mockito.doThrow;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.never;
@@ -64,6 +64,8 @@ class TestingSupportControllerTest {
     @Mock
     private PcsCaseRepository pcsCaseRepository;
     @Mock
+    private ClaimRepository claimRepository;
+    @Mock
     private PartyAccessCodeRepository partyAccessCodeRepository;
     @Mock
     private PcsCaseService pcsCaseService;
@@ -77,7 +79,8 @@ class TestingSupportControllerTest {
     void setUp() {
         underTest = new TestingSupportController(schedulerClient, helloWorldTask,
                                                  docAssemblyService, eligibilityService,
-                                                 pcsCaseRepository, partyAccessCodeRepository, pcsCaseService,
+                                                 pcsCaseRepository, claimRepository,
+                                                 partyAccessCodeRepository, pcsCaseService,
                                                  accessCodeGenerationService
         );
     }
@@ -136,7 +139,6 @@ class TestingSupportControllerTest {
         TaskInstance<Void> mockTaskInstance = mock(TaskInstance.class);
         when(helloWorldTask.instance(anyString())).thenReturn(mockTaskInstance);
 
-        Instant testStartTime = Instant.now();
         ResponseEntity<String> response = underTest.scheduleHelloWorldTask(1,
                                                                            "Bearer token",
                                                                            "ServiceAuthToken");
@@ -149,9 +151,8 @@ class TestingSupportControllerTest {
         verify(schedulerClient).scheduleIfNotExists(any(TaskInstance.class), instantCaptor.capture());
 
         Instant scheduledInstant = instantCaptor.getValue();
-        assertThat(scheduledInstant)
-            .isAfterOrEqualTo(testStartTime)
-            .isBeforeOrEqualTo(testStartTime.plusSeconds(2));
+        assertThat(scheduledInstant).isAfterOrEqualTo(Instant.now());
+        assertThat(scheduledInstant).isBeforeOrEqualTo(Instant.now().plusSeconds(2));
     }
 
     @SuppressWarnings("unchecked")
@@ -172,7 +173,7 @@ class TestingSupportControllerTest {
 
     @Test
     void testGenerateDocument_WithBasicCaseInformation() {
-        final JsonNode formPayload = createJsonNodeFormPayload("John Smith");
+        final JsonNode formPayload = createJsonNodeFormPayload("John Smith", "PCS-123456789");
 
         String expectedDocumentUrl = "http://dm-store/documents/123";
         when(docAssemblyService.generateDocument(
@@ -213,7 +214,7 @@ class TestingSupportControllerTest {
     @Test
     void testGenerateDocument_WithCustomTemplateId() {
         // Note: Controller uses hardcoded template, but keeping test pattern for consistency
-        final JsonNode formPayload = createJsonNodeFormPayload("Jane Doe");
+        final JsonNode formPayload = createJsonNodeFormPayload("Jane Doe", "PCS-123456789");
 
         String expectedDocumentUrl = "http://dm-store/documents/456";
         when(docAssemblyService.generateDocument(
@@ -248,7 +249,7 @@ class TestingSupportControllerTest {
     @Test
     void testGenerateDocument_WithEmptyTemplateId() {
         // Keeping test pattern
-        final JsonNode formPayload = createJsonNodeFormPayload("Test User");
+        final JsonNode formPayload = createJsonNodeFormPayload("Test User", "PCS-123456789");
 
         String expectedDocumentUrl = "http://dm-store/documents/789";
         when(docAssemblyService.generateDocument(
@@ -281,7 +282,7 @@ class TestingSupportControllerTest {
 
     @Test
     void testGenerateDocument_Success() {
-        final JsonNode formPayload = createJsonNodeFormPayload("Test Case");
+        final JsonNode formPayload = createJsonNodeFormPayload("Test Case", "PCS-123456789");
 
         String expectedDocumentUrl = "http://dm-store/documents/123";
         when(docAssemblyService.generateDocument(
@@ -307,7 +308,7 @@ class TestingSupportControllerTest {
 
     @Test
     void testGenerateDocument_Failure() {
-        final JsonNode formPayload = createJsonNodeFormPayload("value1");
+        final JsonNode formPayload = createJsonNodeFormPayload("value1", "PCS-123456789");
 
         when(docAssemblyService.generateDocument(
             any(JsonNode.class),
@@ -333,7 +334,7 @@ class TestingSupportControllerTest {
 
     @Test
     void testGenerateDocument_WhitespaceAuthorization() {
-        final JsonNode formPayload = createJsonNodeFormPayload("Test");
+        final JsonNode formPayload = createJsonNodeFormPayload("Test", "PCS-123456789");
 
         String expectedDocumentUrl = "http://dm-store/documents/123";
         when(docAssemblyService.generateDocument(
@@ -352,7 +353,7 @@ class TestingSupportControllerTest {
 
     @Test
     void testGenerateDocument_NullAuthorization() {
-        final JsonNode formPayload = createJsonNodeFormPayload("Test");
+        final JsonNode formPayload = createJsonNodeFormPayload("Test", "PCS-123456789");
 
         String expectedDocumentUrl = "http://dm-store/documents/123";
         when(docAssemblyService.generateDocument(
@@ -371,7 +372,7 @@ class TestingSupportControllerTest {
 
     @Test
     void testGenerateDocument_EmptyAuthorization() {
-        final JsonNode formPayload = createJsonNodeFormPayload("Test");
+        final JsonNode formPayload = createJsonNodeFormPayload("Test", "PCS-123456789");
 
         String expectedDocumentUrl = "http://dm-store/documents/123";
         when(docAssemblyService.generateDocument(
@@ -391,7 +392,7 @@ class TestingSupportControllerTest {
     // Similar fixes for service authorization tests
     @Test
     void testGenerateDocument_NullServiceAuthorization() {
-        final JsonNode formPayload = createJsonNodeFormPayload("Test");
+        final JsonNode formPayload = createJsonNodeFormPayload("Test", "PCS-123456789");
 
         String expectedDocumentUrl = "http://dm-store/documents/123";
         when(docAssemblyService.generateDocument(
@@ -410,7 +411,7 @@ class TestingSupportControllerTest {
 
     @Test
     void testGenerateDocument_EmptyServiceAuthorization() {
-        final JsonNode formPayload = createJsonNodeFormPayload("Test");
+        final JsonNode formPayload = createJsonNodeFormPayload("Test", "PCS-123456789");
 
         String expectedDocumentUrl = "http://dm-store/documents/123";
         when(docAssemblyService.generateDocument(
@@ -429,7 +430,7 @@ class TestingSupportControllerTest {
 
     @Test
     void testGenerateDocument_WhitespaceServiceAuthorization() {
-        final JsonNode formPayload = createJsonNodeFormPayload("Test");
+        final JsonNode formPayload = createJsonNodeFormPayload("Test", "PCS-123456789");
 
         String expectedDocumentUrl = "http://dm-store/documents/123";
         when(docAssemblyService.generateDocument(
@@ -448,7 +449,7 @@ class TestingSupportControllerTest {
 
     @Test
     void testGenerateDocument_DocAssemblyBadRequestException() {
-        final JsonNode formPayload = createJsonNodeFormPayload("value1");
+        final JsonNode formPayload = createJsonNodeFormPayload("value1", "PCS-123456789");
 
         when(docAssemblyService.generateDocument(
             any(JsonNode.class),
@@ -467,7 +468,7 @@ class TestingSupportControllerTest {
 
     @Test
     void testGenerateDocument_DocAssemblyAuthorizationException() {
-        final JsonNode formPayload = createJsonNodeFormPayload("value1");
+        final JsonNode formPayload = createJsonNodeFormPayload("value1", "PCS-123456789");
 
         when(docAssemblyService.generateDocument(
             any(JsonNode.class),
@@ -487,7 +488,7 @@ class TestingSupportControllerTest {
 
     @Test
     void testGenerateDocument_DocAssemblyNotFoundException() {
-        final JsonNode formPayload = createJsonNodeFormPayload("value1");
+        final JsonNode formPayload = createJsonNodeFormPayload("value1", "PCS-123456789");
 
         when(docAssemblyService.generateDocument(
             any(JsonNode.class),
@@ -507,7 +508,7 @@ class TestingSupportControllerTest {
 
     @Test
     void testGenerateDocument_DocAssemblyServiceUnavailableException() {
-        final JsonNode formPayload = createJsonNodeFormPayload("value1");
+        final JsonNode formPayload = createJsonNodeFormPayload("value1", "PCS-123456789");
 
         when(docAssemblyService.generateDocument(
             any(JsonNode.class),
@@ -528,7 +529,7 @@ class TestingSupportControllerTest {
 
     @Test
     void testGenerateDocument_DocAssemblyServiceErrorException() {
-        final JsonNode formPayload = createJsonNodeFormPayload("value1");
+        final JsonNode formPayload = createJsonNodeFormPayload("value1", "PCS-123456789");
 
         when(docAssemblyService.generateDocument(
             any(JsonNode.class),
@@ -547,7 +548,7 @@ class TestingSupportControllerTest {
 
     @Test
     void testGenerateDocument_DocAssemblyServiceErrorOnly() {
-        final JsonNode formPayload = createJsonNodeFormPayload("value1");
+        final JsonNode formPayload = createJsonNodeFormPayload("value1", "PCS-123456789");
 
         when(docAssemblyService.generateDocument(
             any(JsonNode.class),
@@ -566,7 +567,7 @@ class TestingSupportControllerTest {
 
     @Test
     void testGenerateDocument_DocAssemblyGenericException() {
-        final JsonNode formPayload = createJsonNodeFormPayload("value1");
+        final JsonNode formPayload = createJsonNodeFormPayload("value1", "PCS-123456789");
 
         when(docAssemblyService.generateDocument(
             any(JsonNode.class),
@@ -584,7 +585,7 @@ class TestingSupportControllerTest {
 
     @Test
     void testGenerateDocument_IllegalArgumentException() {
-        final JsonNode formPayload = createJsonNodeFormPayload("value1");
+        final JsonNode formPayload = createJsonNodeFormPayload("value1", "PCS-123456789");
 
         when(docAssemblyService.generateDocument(
             any(JsonNode.class),
@@ -676,7 +677,7 @@ class TestingSupportControllerTest {
     @Test
     void shouldCreateTestCaseSuccessfully() {
         // Given
-        Long caseReference = 1234567890123456L;
+        long caseReference = 1234567890123456L;
         final UUID caseId = UUID.randomUUID();
         AddressUK propertyAddress = AddressUK.builder()
             .addressLine1("123 Test Street")
@@ -684,34 +685,39 @@ class TestingSupportControllerTest {
             .postCode("SW1A 1AA")
             .build();
         LegislativeCountry legislativeCountry = LegislativeCountry.ENGLAND;
-        UUID partyId1 = UUID.randomUUID();
-        UUID partyId2 = UUID.randomUUID();
-        UUID idamUserId1 = UUID.randomUUID();
-        UUID idamUserId2 = UUID.randomUUID();
+
+        final UUID partyId1 = UUID.randomUUID();
+        final UUID partyId2 = UUID.randomUUID();
+        final UUID idamUserId1 = UUID.randomUUID();
+        final UUID idamUserId2 = UUID.randomUUID();
 
         CreateTestCaseRequest request = new CreateTestCaseRequest();
         request.setCaseReference(caseReference);
         request.setPropertyAddress(propertyAddress);
         request.setLegislativeCountry(legislativeCountry);
 
-        List<CreateTestCaseRequest.DefendantRequest> defendants = new ArrayList<>();
         CreateTestCaseRequest.DefendantRequest defendant1 = new CreateTestCaseRequest.DefendantRequest(
-            partyId1, idamUserId1, "John", "Doe"
+            idamUserId1, "John", "Doe"
         );
         CreateTestCaseRequest.DefendantRequest defendant2 = new CreateTestCaseRequest.DefendantRequest(
-            partyId2, idamUserId2, "Jane", "Smith"
+            idamUserId2, "Jane", "Smith"
         );
-        defendants.add(defendant1);
-        defendants.add(defendant2);
-        request.setDefendants(defendants);
+        request.setDefendants(List.of(defendant1, defendant2));
 
         PcsCaseEntity caseEntity = PcsCaseEntity.builder()
             .id(caseId)
             .caseReference(caseReference)
             .build();
 
-        when(pcsCaseRepository.findByCaseReference(caseReference))
-            .thenReturn(Optional.of(caseEntity));
+        when(pcsCaseService.createCase(caseReference, propertyAddress, legislativeCountry))
+            .thenReturn(caseEntity);
+
+        Map<UUID, UUID> idamIdToPartyIdMap = Map.of(
+            idamUserId1, partyId1,
+            idamUserId2, partyId2
+        );
+
+        stubEntityFlush(caseEntity, idamIdToPartyIdMap);
 
         List<PartyAccessCodeEntity> accessCodes = new ArrayList<>();
         PartyAccessCodeEntity accessCode1 = PartyAccessCodeEntity.builder()
@@ -745,7 +751,6 @@ class TestingSupportControllerTest {
         assertThat(response.getBody().getDefendants().get(1).getAccessCode()).isEqualTo("XYZ789");
 
         verify(pcsCaseService).createCase(caseReference, propertyAddress, legislativeCountry);
-        verify(pcsCaseRepository).findByCaseReference(caseReference);
         verify(pcsCaseRepository).save(caseEntity);
         verify(accessCodeGenerationService).createAccessCodesForParties(String.valueOf(caseReference));
     }
@@ -768,7 +773,7 @@ class TestingSupportControllerTest {
 
         List<CreateTestCaseRequest.DefendantRequest> defendants = new ArrayList<>();
         CreateTestCaseRequest.DefendantRequest defendant1 = new CreateTestCaseRequest.DefendantRequest(
-            null, UUID.randomUUID(), "Bob", "Johnson" // partyId will be auto-generated
+            UUID.randomUUID(), "Bob", "Johnson" // partyId will be auto-generated
         );
         defendants.add(defendant1);
         request.setDefendants(defendants);
@@ -778,8 +783,10 @@ class TestingSupportControllerTest {
             .caseReference(1234567890123456L)
             .build();
 
-        when(pcsCaseRepository.findByCaseReference(anyLong()))
-            .thenReturn(Optional.of(caseEntity));
+        when(pcsCaseService.createCase(anyLong(), eq(propertyAddress), eq(legislativeCountry)))
+            .thenReturn(caseEntity);
+
+        stubEntityFlush(caseEntity);
 
         when(partyAccessCodeRepository.findAllByPcsCase_Id(caseId))
             .thenReturn(new ArrayList<>());
@@ -794,8 +801,8 @@ class TestingSupportControllerTest {
         assertThat(response.getBody()).isNotNull();
         assertThat(response.getBody().getCaseId()).isEqualTo(caseId);
         assertThat(response.getBody().getDefendants()).hasSize(1);
-        assertThat(response.getBody().getDefendants().get(0).getPartyId()).isNotNull();
-        assertThat(response.getBody().getDefendants().get(0).getFirstName()).isEqualTo("Bob");
+        assertThat(response.getBody().getDefendants().getFirst().getPartyId()).isNotNull();
+        assertThat(response.getBody().getDefendants().getFirst().getFirstName()).isEqualTo("Bob");
 
         verify(pcsCaseService).createCase(anyLong(), eq(propertyAddress), eq(legislativeCountry));
     }
@@ -803,7 +810,7 @@ class TestingSupportControllerTest {
     @Test
     void shouldCreateTestCaseWithAutoGeneratedPartyIds() {
         // Given
-        Long caseReference = 9876543210987654L;
+        long caseReference = 9876543210987654L;
         final UUID caseId = UUID.randomUUID();
         AddressUK propertyAddress = AddressUK.builder()
             .addressLine1("789 Test Road")
@@ -819,7 +826,7 @@ class TestingSupportControllerTest {
 
         List<CreateTestCaseRequest.DefendantRequest> defendants = new ArrayList<>();
         CreateTestCaseRequest.DefendantRequest defendant1 = new CreateTestCaseRequest.DefendantRequest(
-            null, null, "Alice", "Williams" // partyId and idamUserId will be auto-generated
+            null, "Alice", "Williams" // partyId and idamUserId will be auto-generated
         );
         defendants.add(defendant1);
         request.setDefendants(defendants);
@@ -829,8 +836,10 @@ class TestingSupportControllerTest {
             .caseReference(caseReference)
             .build();
 
-        when(pcsCaseRepository.findByCaseReference(caseReference))
-            .thenReturn(Optional.of(caseEntity));
+        when(pcsCaseService.createCase(caseReference, propertyAddress, legislativeCountry))
+            .thenReturn(caseEntity);
+
+        stubEntityFlush(caseEntity);
 
         when(partyAccessCodeRepository.findAllByPcsCase_Id(caseId))
             .thenReturn(new ArrayList<>());
@@ -851,7 +860,7 @@ class TestingSupportControllerTest {
     @Test
     void shouldHandleAccessCodeGenerationFailure() {
         // Given
-        Long caseReference = 1111111111111111L;
+        long caseReference = 1111111111111111L;
         final UUID caseId = UUID.randomUUID();
         AddressUK propertyAddress = AddressUK.builder()
             .addressLine1("999 Test Lane")
@@ -867,7 +876,7 @@ class TestingSupportControllerTest {
 
         List<CreateTestCaseRequest.DefendantRequest> defendants = new ArrayList<>();
         CreateTestCaseRequest.DefendantRequest defendant1 = new CreateTestCaseRequest.DefendantRequest(
-            UUID.randomUUID(), UUID.randomUUID(), "Test", "User"
+            UUID.randomUUID(), "Test", "User"
         );
         defendants.add(defendant1);
         request.setDefendants(defendants);
@@ -877,8 +886,8 @@ class TestingSupportControllerTest {
             .caseReference(caseReference)
             .build();
 
-        when(pcsCaseRepository.findByCaseReference(caseReference))
-            .thenReturn(Optional.of(caseEntity));
+        when(pcsCaseService.createCase(caseReference, propertyAddress, legislativeCountry))
+            .thenReturn(caseEntity);
 
         doThrow(new RuntimeException("Access code generation failed"))
             .when(accessCodeGenerationService).createAccessCodesForParties(anyString());
@@ -898,7 +907,7 @@ class TestingSupportControllerTest {
     @Test
     void shouldHandleCaseCreationFailure() {
         // Given
-        Long caseReference = 2222222222222222L;
+        long caseReference = 2222222222222222L;
         AddressUK propertyAddress = AddressUK.builder()
             .addressLine1("111 Test Drive")
             .postTown("Liverpool")
@@ -913,7 +922,7 @@ class TestingSupportControllerTest {
 
         List<CreateTestCaseRequest.DefendantRequest> defendants = new ArrayList<>();
         CreateTestCaseRequest.DefendantRequest defendant1 = new CreateTestCaseRequest.DefendantRequest(
-            UUID.randomUUID(), UUID.randomUUID(), "Error", "Test"
+            UUID.randomUUID(), "Error", "Test"
         );
         defendants.add(defendant1);
         request.setDefendants(defendants);
@@ -949,13 +958,10 @@ class TestingSupportControllerTest {
 
         List<CreateTestCaseRequest.DefendantRequest> defendants = new ArrayList<>();
         CreateTestCaseRequest.DefendantRequest defendant1 = new CreateTestCaseRequest.DefendantRequest(
-            UUID.randomUUID(), UUID.randomUUID(), "NotFound", "Test"
+            UUID.randomUUID(), "NotFound", "Test"
         );
         defendants.add(defendant1);
         request.setDefendants(defendants);
-
-        when(pcsCaseRepository.findByCaseReference(caseReference))
-            .thenReturn(Optional.empty());
 
         // When
         ResponseEntity<CreateTestCaseResponse> response = underTest.createTestCase(
@@ -1056,7 +1062,7 @@ class TestingSupportControllerTest {
     @Test
     void shouldHandleDeleteCaseFailure() {
         // Given
-        long caseReference = 7777777777777777L;
+        Long caseReference = 7777777777777777L;
         UUID caseId = UUID.randomUUID();
         PcsCaseEntity caseEntity = PcsCaseEntity.builder()
             .id(caseId)
@@ -1118,98 +1124,42 @@ class TestingSupportControllerTest {
         assertThat(response.getBody()).isNull();
     }
 
-    @Test
-    void shouldReturnPins() {
-        // Given
-        long caseReference = 8888888888888888L;
-        UUID caseId = UUID.randomUUID();
-        String accessCodeString = "CODE123";
-        UUID partyCode = UUID.randomUUID();
-        String firstName = "firstname";
-        String lastName = "lastname";
-
-        Defendant defendant = Defendant.builder()
-            .partyId(partyCode)
-            .firstName(firstName)
-            .lastName(lastName).build();
-
-        PcsCaseEntity caseEntity = PcsCaseEntity.builder()
-            .id(caseId)
-            .caseReference(caseReference)
-            .defendants(List.of(defendant))
-            .build();
-
-        List<PartyAccessCodeEntity> accessCodes = new ArrayList<>();
-        PartyAccessCodeEntity accessCode1 = PartyAccessCodeEntity.builder()
-            .id(UUID.randomUUID())
-            .code(accessCodeString)
-            .partyId(partyCode)
-            .build();
-        accessCodes.add(accessCode1);
-
-        when(pcsCaseRepository.findByCaseReference(caseReference))
-            .thenReturn(Optional.of(caseEntity));
-
-        when(partyAccessCodeRepository.findAllByPcsCase_Id(caseId))
-            .thenReturn(accessCodes);
-
-        // When
-        ResponseEntity<Map<String, Defendant>> response = underTest.getPins(
-            "ServiceAuthToken", caseReference
-        );
-
-        // Then
-        assertThat(response.getStatusCode().value()).isEqualTo(200);
-        assertThat(response.getBody() != null
-            && response.getBody().get(accessCodeString) != null);
-        assertThat(
-            response.getBody().get(accessCodeString).getFirstName().equals(firstName)
-                &&
-                response.getBody().get(accessCodeString).getLastName().equals(lastName));
-    }
-
-    @Test
-    void shouldHandleInvalidCaseWhenReturnPins() {
-        // Given
-        long caseReference = 8888888888888888L;
-
-        when(pcsCaseRepository.findByCaseReference(caseReference))
-            .thenReturn(Optional.empty());
-
-        // When
-        ResponseEntity<Map<String, Defendant>> response = underTest.getPins(
-            "ServiceAuthToken", caseReference
-        );
-
-        // Then
-        assertThat(HttpStatus.NOT_FOUND.equals(response.getStatusCode()));
-    }
-
-    @Test
-    void shouldHandleServerErrorWhenReturnPins() {
-        // Given
-        long caseReference = 1111111111111111L;
-
-        when(pcsCaseRepository.findByCaseReference(caseReference))
-            .thenThrow(new RuntimeException());
-
-        // When
-        ResponseEntity<Map<String, Defendant>> response = underTest.getPins(
-            "ServiceAuthToken", caseReference
-        );
-
-        // Then
-        assertThat(HttpStatus.INTERNAL_SERVER_ERROR.equals(response.getStatusCode()));
-    }
-
-    private JsonNode createJsonNodeFormPayload(String applicantName) {
+    private JsonNode createJsonNodeFormPayload(String applicantName, String caseNumber) {
         try {
             String json = String.format("{\"applicantName\":\"%s\",\"caseNumber\":\"%s\"}",
-                                        applicantName, "PCS-123456789"
-            );
+                                      applicantName, caseNumber);
             return objectMapper.readTree(json);
         } catch (Exception e) {
             throw new RuntimeException("Failed to create JsonNode", e);
         }
+    }
+
+    /**
+     * Stub the assigning of entity IDs on the repo flush, as would be done by the DB.
+     * @param caseEntity The case entity
+     */
+    private void stubEntityFlush(PcsCaseEntity caseEntity) {
+        stubEntityFlush(caseEntity, Map.of());
+    }
+
+    /**
+     * Stub the assigning of entity IDs on the repo flus, with the option to specify
+     * what party IDs should be assigned based on the IDAM ID, otherwise a random UUID
+     * will be assigned.
+     * @param caseEntity The case entity
+     * @param idamIdToPartyIdMap Map from IDAM ID to Party ID to assign
+     */
+    private void stubEntityFlush(PcsCaseEntity caseEntity, Map<UUID, UUID> idamIdToPartyIdMap) {
+        doAnswer(invocationOnMock -> {
+            caseEntity.getParties()
+                .forEach(party -> {
+                    if (party.getIdamId() != null) {
+                        party.setId(idamIdToPartyIdMap.getOrDefault(party.getIdamId(), UUID.randomUUID()));
+                    } else {
+                        party.setId(UUID.randomUUID());
+                    }
+                });
+            return null;
+        }).when(pcsCaseRepository).flush();
     }
 }
